# Protobufs

Cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  Players.pb.h  cmake_install.cmake  main  main.cpp
Cpp/server/: CMakeCache.txt  CMakeLists.txt  Makefile  Players.pb.cc  Players.proto  cmake_install.cmake  main  main.cpp  server
Java/server/: server.java
Java/server/my-app/: pom.xml  run_command
Java/server/my-app/src/main/java/com/mycompany/app/: App.java  PlayerWindow.java  PlayersObserver.java  PlayersOuterClass.java
Java/server/my-app/src/main/proto/: Players.proto
Java/server/test/: PlayersOuterClass.java
